--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   type: openai
   lifecycle: production
-  owner: guests
+  owner: dc
   system: tour-of-heroes
   dependsOn: ['resource:villains-db']
   apiConsumedBy: ['component:www-villains']
